signup_login css and js added

--- a/Frontend/signup_login.html
+++ b/Frontend/signup_login.html
@@ -68,27 +68,18 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            <div>
-              <div class="logo">
-                <h1>RealTalk</h1>
-                <p style="top: -50px">Real conversations, anytime, anywhere</p>
-              </div>
-            </div>
-            <h3>New here ?</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
-            </p>
+            <div></div>
+            <h1>RealTalk</h1>
+            <p>Real conversations, anytime, anywhere</p>
+            <p>New here?</p>
             <button class="btn transparent" id="sign-up-btn">Sign up</button>
           </div>
         </div>
         <div class="panel right-panel">
           <div class="content">
-            <h3>One of us ?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
-            </p>
+            <h1>RealTalk</h1>
+            <p>Real conversations, anytime, anywhere</p>
+            <p>One of us?</p>
             <button class="btn transparent" id="sign-in-btn">Sign in</button>
           </div>
           <img src="" class="image" alt="" />
