landing_page_done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,7 +12,7 @@
    
    <div id="navbar">
     <div class="image">
-        <img src="./images/real talk.png" alt="error">
+        <a href="./index.html"><img src="./images/real talk.png" style="width:130px;" alt="error"></a>
     </div>
     <div class="nav-menu">
         <ul>
@@ -88,6 +88,7 @@
             <h3><b>Get social with the new Bing in Skype</b></h3>
             <p>The new Bing in Skype is your AI-powered copilot, and can provide helpful answers to your questions. Whether you need a quick answer or something more in-depth, Bing uses the latest advancements in AI technology to provide you with the most real-time answers and insights.</p>
             <a href="#">Learn more ></a>
+            
         </div>
         <div>
             <img src="https://secure.skypeassets.com/content/dam/scom/blogs/bing/skype-bing-thumbnail.jpg" alt="error">
@@ -108,5 +109,93 @@
             <a href="#">Learn more ></a>
         </div>
     </div>
+    <div id="footer-part">
+        <table id="footer">
+          <tr>
+            <th>What's new</th>
+            <th>Microsoft Store</th>
+            <th>Education</th>
+            <th>Business</th>
+            <th>Developer & IT</th>
+            <th>Company</th>
+          </tr>
+          <td>Surface Pro 9</td>
+          <td>Account Profile</td>
+          <td>Microsoft in education</td>
+          <td>Microsoft Cloud</td>
+          <td>Azure</td>
+          <td>Careers</td>
+          <tr>
+            <td>Surface Laptop 5</td>
+            <td>Download Center</td>
+            <td>Devices for education</td>
+            <td>Microsoft Security</td>
+            <td>Developer Center</td>
+            <td>About Microsoft</td>
+          </tr>
+          <tr>
+            <td>Surface Studio 2+</td>
+            <td>Microsoft Store support</td>
+            <td>Microsoft Teams for Education</td>
+            <td>Dynamics 365</td>
+            <td>Documentation</td>
+            <td>Company news</td>
+          </tr>
+          <tr>
+            <td>Surface Laptop Go 2</td>
+            <td>Returns</td>
+            <td>Microsoft 365 Education</td>
+            <td>Microsoft 365</td>
+            <td>Microsoft Learn</td>
+            <td>Privacy at Microsoft</td>
+          </tr>
+          <tr>
+            <td>Surface Laptop Studio</td>
+            <td>Order tracking</td>
+            <td>How to buy for your school</td>
+            <td>Microsoft Power Platform</td>
+            <td>Microsoft Tech Community</td>
+            <td>Investors</td>
+          </tr>
+          <tr>
+            <td>Microsoft 365</td>
+            <td>Microsoft Store Promise</td>
+            <td>Deals for students and parents</td>
+            <td>Microsoft Industry</td>
+            <td>AppSource</td>
+            <td>Accessibility</td>
+          </tr>
+        </table>
+      </div>
+      <div id="footer-last">
+        <ul>
+            <li>
+                <a href="#"><p>Sitemap</p></a></li>
+            <li>
+                <a href="#"><p>Contact Us</p></a>
+            </li>
+            <li>
+                <a href="#"><p>Privacy</p></a>
+            </li>
+            <li>
+                <a href="#"><p>Terms of use</p></a>
+            </li>
+            <li>
+                <a href="#"><p>Trademarks</p></a>
+            </li>
+            <li>
+                <a href="#"><p>About our ads</p></a>
+            </li>
+            <li>
+                <a href="#"><p>EU Contract Summary</p></a>
+            </li>
+            <li>
+                <a href="#"><p>Legal</p></a>
+            </li>
+            <li>
+                <a href="#"><p>© Microsoft 2023</p></a>
+            </li>
+        </ul>
+      </div>
 </body>
 </html>
