--- a/Frontend/videochat.html
+++ b/Frontend/videochat.html
@@ -7,13 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/notification.css">
     </link>
+    <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="./scripts/notification.js"></script>
+    <link rel="stylesheet" href="./styles/videochat.css">
     <title>Video-Chat</title>
 </head>
 
 <body>
-    <h1>Welcome</h1>
+    <div id="logoDiv">
+        <img id="logo" style="width: 20%;" src="./images/real talk.png" alt="" />
+    </div>
+
+    <h1 id="roomID"></h1>
+    <div id="videoDiv"></div>
+
+    <!-- <div id="controls">
+        <p id="hangup">
+            <a href="./dashboard.html"><img class="icon"
+                    src="https://icons.veryicon.com/png/o/miscellaneous/cloud-call-center/hang-up.png" alt="" /></a>
+        <p id="hide-video" class="icon-color"><img width="50px" class="icon" src="./images/cam.png" alt=""></p>
+        <p id="hide-audio" class="icon-color"><img class="icon" src="./images/mike.png" alt=""></p>
+        </p>
+    </div> -->
 </body>
+<script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
+    integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
+    crossorigin="anonymous"></script>
+
 <script src="./scripts/videochat.js"></script>
 
 </html>
