--- a/Frontend/room.html
+++ b/Frontend/room.html
@@ -11,16 +11,24 @@
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
         integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/room.css">
 </head>
 
 <body>
-    <div id="main">
-        <h1 id="title"></h1>
-        <h2>Create/Join room to get Started</h2>
 
+    <h1 id="title"></h1>
+    <h2>Create/Join room to get Started</h2>
+
+
+    <div id="main">
+        <div id="logoDiv">
+
+            <img id="logo" src="./images/real talk.png" alt="LogoError">
+        </div>
         <div id="create-room">Create Room</div>
         <div id="join-room">Join Room</div>
     </div>
+
 </body>
 <script src="./scripts/room.js"></script>
 
