--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -49,7 +49,7 @@
             <ul>
                 <li><a href="#">My account</a></li>
                 <li><a href="#">Use Skype Online</a></li>
-                <li><a href="#">New to Skype? <span>Sign Up</span></a></li>
+                <li><a href="./signup_login.html">New to Skype? <span>Sign Up</span></a></li>
             </ul>
             </li>
         </ul>
