--- a/Backend/Authentication/index.html
+++ b/Backend/Authentication/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="https://github.com/login/oauth/authorize?client_id=189e6f67d80828ba075f&scope=user:email"><button >continue with github</button></a> 
+    <a href="https://github.com/login/oauth/authorize?client_id=7985eda3cc93ebd0ce4a&scope=user:email"><button >continue with github</button></a> 
+    <a href="http://localhost:8080/auth/google" class="btn btn-danger"><button>SignIn with Google</button></a>
+
 </body>
 </html>
