dashboard_page_done

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -98,7 +98,7 @@
                 <img src="./images/2nd_image.png" alt="error">
                 <h3 id="title">Stay available with second Skype Number</h3>
                 <p id="no-title">Let people call you for local rates by purchasing your second phone number with Skype.</p>
-                <button style="font-weight: bolder">Get your Skype Number</button>
+                <button style="font-weight: bolder">Chat Now</button>
             </div>
            </div>
            <div id="last-mail">
