--- a/Frontend/signup_login.html
+++ b/Frontend/signup_login.html
@@ -24,7 +24,7 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" />
             </div>
-            <input type="submit" value="Login" class="btn solid" />
+            <a href="#"><input type="submit" value="Login" class="btn solid" /></a>
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
