--- a/Frontend/videochat.html
+++ b/Frontend/videochat.html
@@ -20,16 +20,17 @@
 
     <h1 id="roomID"></h1>
     <div id="videoDiv"></div>
-
-    <!-- <div id="controls">
+ <div id="controls">
         <p id="hangup">
             <a href="./dashboard.html"><img class="icon"
                     src="https://icons.veryicon.com/png/o/miscellaneous/cloud-call-center/hang-up.png" alt="" /></a>
         <p id="hide-video" class="icon-color"><img width="50px" class="icon" src="./images/cam.png" alt=""></p>
         <p id="hide-audio" class="icon-color"><img class="icon" src="./images/mike.png" alt=""></p>
         </p>
-    </div> -->
+    </div>
+   
 </body>
+
 <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
     integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
     crossorigin="anonymous"></script>
