working_under_process

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,7 @@
       <div class="nav-menu">
         <ul>
           <li>
-            <a href="#"><b>Skype</b></a>
+            <a href="#"><b>Real Talk</b></a>
           </li>
           <li><a href="#">Downloads</a></li>
           <li><a href="#">Skype To Phone</a></li>
@@ -91,7 +91,7 @@
     </div>
 
     <div id="mid-second">
-      <h1>Discover more from Skype</h1>
+      <h1>Discover more from Real Talk</h1>
     </div>
 
     <div id="mid-third">
