Server Deployed link & Error Resolved of video

--- a/Frontend/room.html
+++ b/Frontend/room.html
@@ -23,7 +23,7 @@
     <div id="main">
         <div id="logoDiv">
 
-            <img id="logo" src="./images/real talk.png" alt="LogoError">
+            <img id="logo" src="./images/real_talk_blue.png" alt="LogoError">
         </div>
         <div id="create-room">Create Room</div>
         <div id="join-room">Join Room</div>
