--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -30,8 +30,8 @@
                 <span class="dot"></span>
               </div>
               <div id="search">
-                <label for="example-input"><img src="./images/search_icon.png" alt="error"></label>
                 <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages">
+                <label id="search-btn" for="example-input"><img id="serch-img" src="./images/search_icon.png" alt="error"></label>
               </div>
               <div id="all-icon">
               <div id="chat-menu">
@@ -60,8 +60,8 @@
               </div>
             </div>
             <div id="meet-now">
-                <a href="#"><button>Meet Now</button></a>
-                <a href="#"><button>New Chat</button></a>
+                <a href="#"><button id="videoBtn">Meet Now</button></a>
+                <a href="#"><button id="chatBtn">New Chat</button></a>
             </div>
             <div id="recent-chats">
                 <p>Recent Chats ></p>
@@ -92,13 +92,13 @@
                 <img src="./images/1st_image.png" alt="error">
                 <h3 id="title">Easy meeting with anyone</h3>
                 <p id="no-title">Share the invite with anyone even if they aren't on Skype. No sign ups or downloads required.</p>
-                <a href="#"><button style="font-weight: bolder" >Meet Now</button></a>
+                <a href="#"><button id="center-video-btn" style="font-weight: bolder" >Meet Now</button></a>
             </div>
             <div class="section-2">
                 <img src="./images/2nd_image.png" alt="error">
                 <h3 id="title">Stay available with second Skype Number</h3>
                 <p id="no-title">Let people call you for local rates by purchasing your second phone number with Skype.</p>
-                <button style="font-weight: bolder">Chat Now</button>
+                <button id="center-chat-btn" style="font-weight: bolder">Chat Now</button>
             </div>
            </div>
            <div id="last-mail">
@@ -111,4 +111,5 @@
         <!-- right-div-end -->
     </div>
 </body>
+<script src="./scripts/dashbord.js"></script>
 </html>
