--- a/Frontend/signup_login.html
+++ b/Frontend/signup_login.html
@@ -36,7 +36,7 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form">
+          <form action="#" id="signup-form" class="sign-up-form">
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
