--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <title>Real Talk</title>
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
@@ -13,7 +17,10 @@
     <div id="navbar">
       <div class="image">
         <a href="./index.html"
-          ><img src="./images/real_talk_blue.png.crdownload" style="width: 130px" alt="error"
+          ><img
+            src="./images/real_talk_blue.png.crdownload"
+            style="width: 130px"
+            alt="error"
         /></a>
       </div>
       <div class="nav-menu">
