--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -10,10 +10,12 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/c8626bb222.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <main>
+  <main id="main">
     <div class="page-container">
       <div class="grid-container">
         <div class="left-side">
@@ -25,14 +27,19 @@
         <div class="right-side">
           <div class="wrapper">
             <h2>Get started.</h2>
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <p>Already have an account? <a href="./login.html">Log in</a></p>
             <div class="sign-up-buttons">
               <button id="sign-up"><img src="./images/google-icon.png"> Sign up with Google</button>
-              <button id="sign-up-facebook"><img src="./images/facebook-icon.svg" width="16px"> Sign up with facebook</button>
+              <button id="sign-up-facebook"><img src="./images/icons8-github-30.png" width="20px"> Sign up with Github</button>
             </div>
             <p class="socials-divider"><span>or</span></p>
 
             <form action="">
+              <label for="name">Enter your Name</label>
+              <div class="email-input-container">
+                <i class="fa-regular fa-user icon-email"></i>
+                <input type="name" name="full_name" placeholder="Enter your name" id="name">
+              </div>
               <label for="email">Email address</label>
               <div class="email-input-container">
                 <i class="fi fi-rr-envelope icon-email"></i>
@@ -48,7 +55,7 @@
             </form>
 
             <div class="agreement-check">
-              <input type="checkbox" name="terms_of_service_and_privacy_policy">
+              <input type="checkbox" name="terms_of_service_and_privacy_policy" required>
               <span class="terms-of-use-text">I agree to Plataform's
                 <a href="#">Terms of Service</a> and
                 <a href="#">Privacy Policy</a>
@@ -56,7 +63,7 @@
             </div>
 
             <button id="register-button" type="submit">Register</button>
-            <p class="credits">Made with ❤️ by <a href="https://github.com/aluizamendes" target="_blank">aluizamendes</a></p>
+            <!-- <p class="credits">Made with ❤️ by <a href="https://github.com/aluizamendes" target="_blank">aluizamendes</a></p> -->
           </div>
         </div>    
       </div>
