Day-5 work done

--- a/Frontend/signup_login.html
+++ b/Frontend/signup_login.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/signup_login.css" />
+    <link rel="stylesheet" href="./styles/signup.css" />
     <title>Sign in & Sign up Form</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
               <i class="fas fa-envelope"></i>
               <input type="email" placeholder="Email" />
             </div>
-            
+
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" />
@@ -92,6 +92,6 @@
       </div>
     </div>
 
-    <script src="./scripts/signup_login.js"></script>
+    <script src="./scripts/signup.js"></script>
   </body>
 </html>
