working_under_process

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -46,8 +46,8 @@
                     search
                     </span>
 
-                <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages">
-                <label id="search-btn" for="example-input"><img id="serch-img" src="./images/search_icon.png" alt="error"></label>
+                <!-- <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages"> -->
+                <!-- <label id="search-btn" for="example-input"><img id="serch-img" src="./images/search_icon.png" alt="error"></label> -->
 
               </div>
               <div id="all-icon">
@@ -118,16 +118,16 @@
                 <p id="no-title">Let people call you for local rates by purchasing your second phone number with Real Talk.</p>
                 <button style="font-weight: bolder">Chat Now</button>
 
-                <p id="no-title">Share the invite with anyone even if they aren't on Skype. No sign ups or downloads required.</p>
-                <a href="#"><button id="center-video-btn" style="font-weight: bolder" >Meet Now</button></a>
+                <!-- <p id="no-title">Share the invite with anyone even if they aren't on Skype. No sign ups or downloads required.</p> -->
+                <!-- <a href="#"><button id="center-video-btn" style="font-weight: bolder" >Meet Now</button></a> -->
             </div>
-            <div class="section-2">
+            <!-- <div class="section-2">
                 <img src="./images/2nd_image.png" alt="error">
                 <h3 id="title">Stay available with second Skype Number</h3>
                 <p id="no-title">Let people call you for local rates by purchasing your second phone number with Skype.</p>
                 <button id="center-chat-btn" style="font-weight: bolder">Chat Now</button>
 
-            </div>
+            </div> -->
            </div>
            <div id="last-mail">
             <p>You are signed in as <span>append-email</span></p>
