--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form | Wavefire Coding</title>
-    <link rel="stylesheet" href="./styles/login.css">
+    <title>Login Form | RealTalk</title>
+    <link rel="stylesheet" href="./styles/login.css"> 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 </head>
 <body>
     <div class="main-wrap">
@@ -23,24 +24,28 @@
                     <h6>Login your Account</h6>
                     <form action="" class="form">
                         <label for="Username">Username</label></br>
-                        <input type="email" name="username" id="" placeholder="Your email"> 
+                        <input type="email" name="username" id="lemail" placeholder="Your email"> 
                         </br></br>
                         <label for="Password">Password</label></br>
-                        <input type="password" name="password" id="" placeholder="Your password">
+                        <input type="password" name="password" id="lpass" placeholder="Your password">
                         <br>
                         <span><a href="#" class="fg-pass">Forgot password?</a></span>
                         <br>
-                        <button type="submit" class="login-btn">Login</button>
+                        <button type="submit" class="login-btn" id="login">Login</button>
                     </form>
                 </div>
                 <div class="login-with">
-                    <span>Login with</span>
-                    <a href="https://facebook.com/"><img src="images/fb.png" alt=""></a>
+                    <span>Login with</span> 
+                    <a href="http://localhost:8080/auth/google" ><img src="images/google.png" alt=""></a>
+              <a href="https://github.com/login/oauth/authorize?client_id=7985eda3cc93ebd0ce4a&scope=user:email"><img src="./images/icons8-github-30.png" width="20px"></a>
+            
+                    <!-- <<a href="https://facebook.com/"><img src="images/fb.png" alt=""></a>
                     <a href=""><img src="images/google.png" alt=""></a>
-                    <a href="https://twitter.com/"><img src="images/twitter.png" alt=""></a>
+                    <a href="https://twitter.com/"><img src="images/twitter.png" alt=""></a>> -->
                 </div>
             </div>
         </div>
     </div>
 </body>
-</html>
+</html> 
+<script src="./scripts/login.js"></script>
