media_query_done

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -62,7 +62,7 @@
               <li><a href="#">My account</a></li>
               <li><a href="#">Use Skype Online</a></li>
               <li>
-                <a href="./signup_login.html"
+                <a href="./signup.html"
                   >New to Skype? <span>Sign Up</span></a
                 >
               </li>
@@ -84,7 +84,7 @@
           answers, creative ideas or summaries in chat, anytime, anywhere.
           <a href="#">Learn More</a>
         </h2>
-        <button>Download Real Talk</button>
+        <a href="#"><button>Download Real Talk</button></a>
         <div class="last">
           <a href="#">Open Skype in your browser</a>
         </div>
