--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form | Wavefire Coding</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
     <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
