--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -29,7 +29,7 @@
                     <h1>Welcome Back</h1>
                     <h6>Login your Account</h6>
                     <form action="" class="form">
-                        <label for="Username">Username</label></br>
+                        <label for="Username">Enter your email</label></br>
                         <input type="email" name="username" id="lemail" placeholder="Your email"> 
                         </br></br>
                         <label for="Password">Password</label></br>
