--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -1,174 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon_io/favicon-16x16.png"
+    />
     <link rel="manifest" href="./favicon_io/site.webmanifest" />
     <title>My Dashboard</title>
-     <link rel="stylesheet" href="./styles/dashboard.css">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./styles/dashboard.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  </head>
+  <body>
     <div id="main">
+      <!-- left-div-start  -->
 
-        <!-- left-div-start  -->
-
-        <div id="left">
-            <div id="name">
-                <h2 id="append-name">Md Haroon Hussain</h2>
-                <p>Set a status</p>
-            </div>
- 
-            <div id="myDropdown">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-              <div id="search">
-
-                <!-- <label for="example-input"><img src="./images/search_icon.png" alt="error"></label> -->
-                
-                <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages">
-                <span class="material-symbols-outlined">
-                    search
-                    </span>
-
-                <!-- <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages"> -->
-                <!-- <label id="search-btn" for="example-input"><img id="serch-img" src="./images/search_icon.png" alt="error"></label> -->
-
-              </div>
-              <div id="all-icon">
-              <div id="chat-menu">
-                <span class="material-symbols-outlined">
-                    Chat
-                    </span>
-                    <p>Chats</p>
-              </div>
-              <div id="call-menu">
-                <span class="material-symbols-outlined">
-                    call
-                    </span>
-                    <p>Calls</p>
-              </div>
-              <div id="contact-menu">
-                <span class="material-symbols-outlined">
-                    contacts
-                    </span>
-                    <p>Contacts</p>
-              </div>
-              <div id="notification-menu">
-                <span class="material-symbols-outlined">
-                    notifications
-                    </span>
-                    <p>Notifications</p>
-              </div>
-            </div>
-            <div id="meet-now">
-                <a href="#"><button id="videoBtn">Meet Now</button></a>
-                <a href="#"><button id="chatBtn">New Chat</button></a>
-            </div>
-            <div id="recent-chats">
-                <p>Recent Chats ></p>
-            </div>
-            <div id="chat-image-logo">
-                <img src="https://secure.skypeassets.com/wcss/8-97-0-206/images/onboarding/chats_emptystate_v1.png" alt="error">
-                <h2>Start chatting on Real Talk</h2>
-                <p>Use search to find anyone on Real Talk</p>
-            </div>
+      <div id="left">
+        <div id="name">
+          <h2 id="append-name">Md Haroon Hussain</h2>
         </div>
 
-        <!-- left-div-end -->
+        <div id="myDropdown">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+        <div id="search">
+          <!-- <label for="example-input"><img src="./images/search_icon.png" alt="error"></label> -->
 
+          <input
+            type="text"
+            id="example-input"
+            name="example-input"
+            placeholder="People, groups, messages"
+          />
+          <span class="material-symbols-outlined"> search </span>
 
-        <!-- right-div-start -->
+          <!-- <input type="text" id="example-input" name="example-input" placeholder="People, groups, messages"> -->
+          <!-- <label id="search-btn" for="example-input"><img id="serch-img" src="./images/search_icon.png" alt="error"></label> -->
+        </div>
+        <div id="all-icon">
+          <div id="chat-menu">
+            <span class="material-symbols-outlined"> Chat </span>
+            <p>Chats</p>
+          </div>
+          <div id="call-menu">
+            <span class="material-symbols-outlined"> call </span>
+            <p>Calls</p>
+          </div>
+          <div id="contact-menu">
+            <span class="material-symbols-outlined"> contacts </span>
+            <p>Contacts</p>
+          </div>
+          <div id="notification-menu">
+            <span class="material-symbols-outlined"> notifications </span>
+            <p>Notifications</p>
+          </div>
+        </div>
+        <div id="meet-now">
+          <a href="#"><button id="videoBtn">Meet Now</button></a>
+          <a href="#"><button id="chatBtn">New Chat</button></a>
+        </div>
+        <div id="recent-chats">
+          <p>Recent Chats ></p>
+        </div>
+        <div id="chat-image-logo">
+          <img
+            src="https://secure.skypeassets.com/wcss/8-97-0-206/images/onboarding/chats_emptystate_v1.png"
+            alt="error"
+          />
+          <h2>Start chatting on Real Talk</h2>
+          <p>Use search to find anyone on Real Talk</p>
+        </div>
+      </div>
 
-        <div id="right">
-           <div id="top">
-            <h1>Welcome!</h1>
-            <h1 id="name-input"></h1>
-           </div>
-           <div class="notes">
-            <h3>Here are some quick actions to get you started</h3>
-           </div>
+      <!-- left-div-end -->
 
-           <div class="sections">
-            <div class="section-1">
-                <img src="./images/1st_image.png" alt="error">
-                <h3 id="title">Easy meeting with anyone</h3>
+      <!-- right-div-start -->
 
-                <p id="no-title">Share the invite with anyone even if they aren't on Real Talk. No sign ups or downloads required.</p>
-                <a href="#"><button style="font-weight: bolder" >Meet Now</button></a>
-            </div>
-            <div class="section-2">
-                <img src="./images/2nd_image.png" alt="error">
-                <h3 id="title">Stay available with chat now</h3>
-                <p id="no-title">Let people call you for local rates by purchasing your second phone number with Real Talk.</p>
-                <button style="font-weight: bolder">Chat Now</button>
+      <div id="right">
+        <div id="top">
+          <h1>Welcome! <span id="welcome-name">user</span></h1>
+        </div>
+        <div class="notes">
+          <h3>Here are some quick actions to get you started</h3>
+        </div>
 
-                <!-- <p id="no-title">Share the invite with anyone even if they aren't on Skype. No sign ups or downloads required.</p> -->
-                <!-- <a href="#"><button id="center-video-btn" style="font-weight: bolder" >Meet Now</button></a> -->
-            </div>
-            <!-- <div class="section-2">
+        <div class="sections">
+          <div class="section-1">
+            <img src="./images/1st_image.png" alt="error" />
+            <h3 id="title">Easy meeting with anyone</h3>
+
+            <p id="no-title">
+              Share the invite with anyone even if they aren't on Real Talk. No
+              sign ups or downloads required.
+            </p>
+            <a href="#"
+              ><button id="center-video-btn" style="font-weight: bolder">
+                Meet Now
+              </button></a
+            >
+          </div>
+          <div class="section-2">
+            <img src="./images/2nd_image.png" alt="error" />
+            <h3 id="title">Stay available with chat now</h3>
+            <p id="no-title">
+              Let people call you for local rates by purchasing your second
+              phone number with Real Talk.
+            </p>
+            <button id="center-chat-btn" style="font-weight: bolder">
+              Chat Now
+            </button>
+
+            <!-- <p id="no-title">Share the invite with anyone even if they aren't on Skype. No sign ups or downloads required.</p> -->
+            <!-- <a href="#"><button id="center-video-btn" style="font-weight: bolder" >Meet Now</button></a> -->
+          </div>
+          <!-- <div class="section-2">
                 <img src="./images/2nd_image.png" alt="error">
                 <h3 id="title">Stay available with second Skype Number</h3>
                 <p id="no-title">Let people call you for local rates by purchasing your second phone number with Skype.</p>
                 <button id="center-chat-btn" style="font-weight: bolder">Chat Now</button>
 
             </div> -->
-           </div>
-           <div id="last-mail">
-            <p>You are signed in as <span>append-email</span></p>
-            <p>Try <span>switching accounts </span>if you cannot see your contacts or conversation history.</p>
-            <h3><u>Learn more</u></h3>
-           </div>
         </div>
+        <div id="last-mail">
+          <p>
+            You are signed in as <span id="append-email">append-email</span>
+          </p>
+          <p>
+            Try <span>switching accounts </span>if you cannot see your contacts
+            or conversation history.
+          </p>
+          <h3><u>Learn more</u></h3>
+        </div>
+      </div>
 
-        <!-- right-div-end -->
+      <!-- right-div-end -->
     </div>
-</body>
+  </body>
 
-<script>
+  <script>
     // Get the container element
-const dropdownContainer = document.getElementById("myDropdown");
+    const dropdownContainer = document.getElementById("myDropdown");
 
-// Create the dropdown menu element
-const dropdownMenu = document.createElement("div");
-dropdownMenu.classList.add("dropdown-menu");
+    // Create the dropdown menu element
+    const dropdownMenu = document.createElement("div");
+    dropdownMenu.classList.add("dropdown-menu");
 
-// Add some options to the dropdown menu
-const option1 = document.createElement("a");
+    // Add some options to the dropdown menu
+    const option1 = document.createElement("a");
 
-const option2 = document.createElement("a");
-option2.innerText = "Logout";
-dropdownMenu.appendChild(option2);
+    const option2 = document.createElement("a");
+    option2.innerText = "Logout";
+    dropdownMenu.appendChild(option2);
 
-option2.addEventListener("click",()=>{
-    window.location.href = "index.html";
-})
+    option2.addEventListener("click", async () => {
+      let token = localStorage.getItem("token");
+      try {
+        fetch(`https://nice-lime-elephant-hat.cyclic.app/user/logout`, {
+          method: "POST",
+          headers: {
+            "content-type": "application/json",
+            Authorization: `${token}`,
+          },
+        })
+          .then((res) => res.json())
+          .then((data) => {
+            console.log(data)
+            localStorage.clear();
+            Swal.fire(`${data.msg}`, "", "success");
+          });
+        setTimeout(() => {
+            window.location.href = "index.html";
+        }, 2000);
+      } catch (err) {
+        console.log(err);
+      }
+      // window.location.href = "index.html";
+    });
 
-// Add the dropdown menu to the container element
-dropdownContainer.appendChild(dropdownMenu);
+    // Add the dropdown menu to the container element
+    dropdownContainer.appendChild(dropdownMenu);
 
-// Show the dropdown menu when the container is clicked
-dropdownContainer.addEventListener("click", function() {
-  dropdownContainer.classList.toggle("show");
-});
+    // Show the dropdown menu when the container is clicked
+    dropdownContainer.addEventListener("click", function () {
+      dropdownContainer.classList.toggle("show");
+    });
+  </script>
 
-</script>
-
-<script src="./scripts/dashbord.js"></script>
-
+  <script src="./scripts/dashbord.js"></script>
 </html>
